pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-263-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/263-list_items.md
---
 1. foo


        [33mbar
[0m    

    baz

    [36m│[0m [3mbam[0m
