pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-273-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/273-list_items.md
---
 1. 

    [33m[48;5;236m    indented code[K[0m


    paragraph


    [33m[48;5;236m    more code[K[0m
