pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-289-list_items.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/289-list_items.md
---

[33m[48;5;236m1.  A paragraph[K[0m
[33m[48;5;236m    with two lines.[K[0m
[33m[48;5;236m[K[0m
[33m[48;5;236m        indented code[K[0m
[33m[48;5;236m[K[0m
[33m[48;5;236m    > A block quote.[K[0m
